Cdn finished